--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "fullstack1": "file:..",
     "jest": "^28.1.2",
