--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "fullstack1",
+  "name": "NASA_MISSION_CONTROL",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "NASA_MISSION_CONTROL API",
+  "main": "server.js",
+  "engines": {
+  "node": "14.21.3",
+  "npm": "6.14.18"
+},
   "scripts": {
     "install-server": "npm install --prefix server",
     "update-client": "yarn install --prefix client",
