--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,7 +2,7 @@
 {
     "name":"NASA-MISSION-CONTROL",
     "version":2,
-    "builds":[{"src":"./src/app.js","use":"@vercel/node"}],
+    "builds":[{"src":"./src/server.js","use":"@vercel/node"}],
     "routes": [
       { "src": "/(.*)", "dest": "/app.js" }
    ]
