configured for vercel deployment

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,6 @@
     "version":2,
     "builds":[{"src":"./src/server.js","use":"@vercel/node"}],
     "routes": [
-      { "src": "/(.*)", "dest": "/server.js" }
+      { "src": "/(.*)", "dest": "./src/server.js" }
    ]
 }
