--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "NASA_MISSION_CONTROL API",
   "main": "server.js",
-  "engines": {
+ "engines": {
+  "node": "14.21.3",
+  "npm": "6.14.18"
 },
   "scripts": {
     "install-server": "npm install --prefix server",
